# cpp_wasm_desktop

./: README.md  bootsrap.bat  bootstrap.sh
.github/workflows/: backend.yml
backend/: CMakeLists.txt
backend/src/: cocoa_helper.h  cocoa_helper.m  main.cpp
frontend/: CMakeLists.txt
frontend/src/: main.cpp
